--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         var initialSize = parseFloat(getComputedStyle(character).getPropertyValue('width')); // Tamaño actual del personaje en píxeles
         var targetSize = 10; // Tamaño objetivo del personaje en píxeles
-        var reductionRate = (initialSize - targetSize) / 500; // Tasa de reducción del tamaño para alcanzar el tamaño objetivo en 1.5 segundos
+        var reductionRate = (initialSize - targetSize) / 1500; // Tasa de reducción del tamaño para alcanzar el tamaño objetivo en 1.5 segundos
 
         var reductionInterval = setInterval(function() {
           var currentSize = parseFloat(getComputedStyle(character).getPropertyValue('width'));
@@ -164,6 +164,8 @@
 
             // Reiniciar el juego después de un retraso
             setTimeout(function() {
+              character.style.width = initialSize + 'px'; // Restaurar el ancho original del personaje
+              character.style.paddingBottom = initialSize + 'px'; // Restaurar el alto original del personaje
               resetGame();
             }, 1500); // 1500 milisegundos (1.5 segundos)
           }
