--- a/index.html
+++ b/index.html
@@ -51,20 +51,14 @@
     var character = document.getElementById('character');
     var characterX = 10; // Posición inicial del personaje en el eje X dentro de los límites del juego
     var characterY = 10; // Posición inicial del personaje en el eje Y dentro de los límites del juego
-    var isMoving = false; // Bandera para controlar el estado de movimiento del personaje
+    var isMoving = true; // Estado de movimiento del personaje (inicialmente activo)
 
     // Variables para la zona de caída
     var fallZone = document.getElementById('fall-zone');
-    var fallZoneX = fallZone.offsetLeft;
-    var fallZoneY = fallZone.offsetTop;
-    var fallZoneWidth = fallZone.offsetWidth;
-    var fallZoneHeight = fallZone.offsetHeight;
 
     // Función para mover el personaje
     function moveCharacter(direction) {
-      if (isMoving) return; // Si ya está en movimiento, no hacer nada
-
-      isMoving = true; // Establecer el estado de movimiento a verdadero
+      if (!isMoving) return; // Si el movimiento está desactivado, no hacer nada
 
       var step = 1; // Desplazamiento relativo en píxeles
       var duration = 200; // Duración de cada paso de la animación en milisegundos
@@ -104,7 +98,6 @@
       checkCollision(); // Verificar colisión con la zona de caída
 
       setTimeout(function() {
-        isMoving = false; // Establecer el estado de movimiento a falso después de un retraso
         if (!isMoving) {
           switch (direction) {
             case 'left':
@@ -141,35 +134,22 @@
         characterTop < fallZoneBottom
       ) {
         // El personaje ha colisionado con la zona de caída
-        // Aquí puedes realizar las acciones correspondientes al perder el juego, como reducir el tamaño del personaje y reiniciar el juego
+        // Aquí puedes realizar las acciones correspondientes al perder el juego, como desactivar el movimiento y reiniciar el juego
 
         character.style.animation = 'none'; // Detener la animación de movimiento
+        isMoving = false; // Desactivar el movimiento
 
         var initialSize = parseFloat(getComputedStyle(character).getPropertyValue('width')); // Tamaño actual del personaje en píxeles
         var targetSize = 10; // Tamaño objetivo del personaje en píxeles
-        var reductionRate = (initialSize - targetSize) / 1500; // Tasa de reducción del tamaño para alcanzar el tamaño objetivo en 1.5 segundos
 
-        var reductionInterval = setInterval(function() {
-          var currentSize = parseFloat(getComputedStyle(character).getPropertyValue('width'));
-          var newSize = currentSize - reductionRate;
+        // Reducción instantánea del tamaño
+        character.style.width = targetSize + 'px';
+        character.style.paddingBottom = targetSize + 'px';
 
-          if (newSize > targetSize) {
-            character.style.width = newSize + 'px';
-            character.style.paddingBottom = newSize + 'px';
-          } else {
-            character.style.width = targetSize + 'px';
-            character.style.paddingBottom = targetSize + 'px';
-
-            clearInterval(reductionInterval); // Detener la reducción cuando se alcanza el tamaño objetivo
-
-            // Reiniciar el juego después de un retraso
-            setTimeout(function() {
-              character.style.width = initialSize + 'px'; // Restaurar el ancho original del personaje
-              character.style.paddingBottom = initialSize + 'px'; // Restaurar el alto original del personaje
-              resetGame();
-            }, 1500); // 1500 milisegundos (1.5 segundos)
-          }
-        }, 10); // Intervalo de reducción de tamaño
+        // Reiniciar el juego después de un retraso
+        setTimeout(function() {
+          resetGame();
+        }, 1000); // 1000 milisegundos (1 segundo)
       }
     }
 
@@ -185,6 +165,8 @@
 
       character.style.animation = 'moveAnimation 0.4s steps(4) infinite';
       character.style.backgroundImage = 'url(charidleHOR.png)';
+
+      isMoving = true; // Reactivar el movimiento
     }
 
     // Eventos de teclado para mover el personaje
