--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ function checkCollision() {
     // Aquí puedes realizar las acciones correspondientes al perder el juego, como desactivar el movimiento y reducir el tamaño gradualmente
 
     character.style.animation = 'none'; // Detener la animación de movimiento
-    isMoving = false; // Desactivar el movimiento
+    isMoving = true; // Desactivar el movimiento
 
     var initialSize = parseFloat(getComputedStyle(character).getPropertyValue('width')); // Tamaño actual del personaje en píxeles
     var targetSize = 10; // Tamaño objetivo del personaje en píxeles
