--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       left: 17%; /* Coordenada X de la zona de caída */
       width: 20%; /* Ancho de la zona de caída */
       height: 10%; /* Alto de la zona de caída */
-      background-color: rgba(128, 128, 128, 0.5); /* Color de fondo semitransparente azul de la zona de caída */
+      background-color: rgba(0, 0, 255, 0.5); /* Color de fondo semitransparente azul de la zona de caída */
     }
   </style>
 </head>
@@ -116,70 +116,58 @@
     }
 
     // Función para verificar colisión con la zona de caída
-function checkCollision() {
-  var characterLeft = character.offsetLeft;
-  var characterRight = character.offsetLeft + character.offsetWidth;
-  var characterTop = character.offsetTop;
-  var characterBottom = character.offsetTop + character.offsetHeight;
+    function checkCollision() {
+      var characterLeft = character.offsetLeft;
+      var characterRight = character.offsetLeft + character.offsetWidth;
+      var characterTop = character.offsetTop;
+      var characterBottom = character.offsetTop + character.offsetHeight;
 
-  var fallZoneLeft = fallZone.offsetLeft;
-  var fallZoneRight = fallZone.offsetLeft + fallZone.offsetWidth;
-  var fallZoneTop = fallZone.offsetTop;
-  var fallZoneBottom = fallZone.offsetTop + fallZone.offsetHeight;
+      var fallZoneLeft = fallZone.offsetLeft;
+      var fallZoneRight = fallZone.offsetLeft + fallZone.offsetWidth;
+      var fallZoneTop = fallZone.offsetTop;
+      var fallZoneBottom = fallZone.offsetTop + fallZone.offsetHeight;
 
-  if (
-    characterRight > fallZoneLeft &&
-    characterLeft < fallZoneRight &&
-    characterBottom > fallZoneTop &&
-    characterTop < fallZoneBottom
-  ) {
-    // El personaje ha colisionado con la zona de caída
-    // Aquí puedes realizar las acciones correspondientes al perder el juego, como desactivar el movimiento y reducir el tamaño gradualmente
+      if (
+        characterRight > fallZoneLeft &&
+        characterLeft < fallZoneRight &&
+        characterBottom > fallZoneTop &&
+        characterTop < fallZoneBottom
+      ) {
+        // El personaje ha colisionado con la zona de caída
+        // Aquí puedes realizar las acciones correspondientes al perder el juego, como desactivar el movimiento y reiniciar el juego
 
-    character.style.animation = 'none'; // Detener la animación de movimiento
-    isMoving = true; // Desactivar el movimiento
+        character.style.animation = 'none'; // Detener la animación de movimiento
+        isMoving = false; // Desactivar el movimiento
 
-    var initialSize = parseFloat(getComputedStyle(character).getPropertyValue('width')); // Tamaño actual del personaje en píxeles
-    var targetSize = 10; // Tamaño objetivo del personaje en píxeles
-    var reductionRate = (initialSize - targetSize) / 1500; // Tasa de reducción del tamaño para alcanzar el tamaño objetivo en 1.5 segundos
+        var initialSize = parseFloat(getComputedStyle(character).getPropertyValue('width')); // Tamaño actual del personaje en píxeles
+        var targetSize = 10; // Tamaño objetivo del personaje en píxeles
 
-    var reductionInterval = setInterval(function() {
-      var currentSize = parseFloat(getComputedStyle(character).getPropertyValue('width'));
-      var newSize = currentSize - reductionRate;
-
-      if (newSize > targetSize) {
-        character.style.width = newSize + 'px';
-        character.style.paddingBottom = newSize + 'px';
-      } else {
+        // Reducción instantánea del tamaño
         character.style.width = targetSize + 'px';
         character.style.paddingBottom = targetSize + 'px';
-
-        clearInterval(reductionInterval); // Detener la reducción cuando se alcanza el tamaño objetivo
 
         // Reiniciar el juego después de un retraso
         setTimeout(function() {
           resetGame();
         }, 1000); // 1000 milisegundos (1 segundo)
       }
-    }, 10); // Intervalo de reducción de tamaño
-  }
-}
+    }
 
-// Función para reiniciar el juego
-function resetGame() {
-  characterX = 10;
-  characterY = 10;
-  character.style.left = characterX + '%';
-  character.style.top = characterY + '%';
+    // Función para reiniciar el juego
+    function resetGame() {
+      characterX = 10;
+      characterY = 10;
+      character.style.left = characterX + '%';
+      character.style.top = characterY + '%';
 
-  character.style.width = '4%'; // Restaurar el ancho original del personaje
-  character.style.paddingBottom = '4%'; // Restaurar el alto original del personaje
+      character.style.width = '4%'; // Restaurar el ancho original del personaje
+      character.style.paddingBottom = '4%'; // Restaurar el alto original del personaje
 
-  character.style.animation = 'moveAnimation 0.4s steps(4) infinite';
-  character.style.backgroundImage = 'url(charidleHOR.png)';
+      character.style.animation = 'moveAnimation 0.4s steps(4) infinite';
+      character.style.backgroundImage = 'url(charidleHOR.png)';
 
-  isMoving = true; // Reactivar el movimiento
-}
+      isMoving = true; // Reactivar el movimiento
+    }
 
     // Eventos de teclado para mover el personaje
     document.addEventListener('keydown', function(event) {
