--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@ function checkCollision() {
     // Aquí puedes realizar las acciones correspondientes al perder el juego, como desactivar el movimiento y reducir el tamaño gradualmente
 
     character.style.animation = 'none'; // Detener la animación de movimiento
-    isMoving = true; // Desactivar el movimiento
+    isMoving = false; // Desactivar el movimiento
 
     var initialSize = parseFloat(getComputedStyle(character).getPropertyValue('width')); // Tamaño actual del personaje en píxeles
     var targetSize = 10; // Tamaño objetivo del personaje en píxeles
-    var reductionRate = (initialSize - targetSize) / 1500; // Tasa de reducción del tamaño para alcanzar el tamaño objetivo en 1.5 segundos
+    var reductionRate = (initialSize - targetSize) / 500; // Tasa de reducción del tamaño para alcanzar el tamaño objetivo en 1.5 segundos
 
     var reductionInterval = setInterval(function() {
       var currentSize = parseFloat(getComputedStyle(character).getPropertyValue('width'));
